[tool:pytest]
addopts= --tb native -v -r fxX --maxfail=25 -p no:warnings
python_files=test/*test_*.py
# The ``[tool:pytest]`` section include directives to help with these runners.
# When using pytest the test/conftest.py file will bootstrap SQLAlchemy's plugin.

[sqla_testing]
requirement_cls=sqlalchemy_hsqldb.requirements:Requirements
profile_file=test/profiles.txt
# The section above contains configuration used by SQLAlchemy's test plugin.
# TODO: ensure the value of requiremnt_cls is correct

[db]
default=hsqldb+jaydebeapi://admin@hypersql_test
sqlite=sqlite:///:memory:
# TODO: ensure the value of default is correct.



# TODO: remove this line and everything below...

# [flake8]
# show-source = true
# enable-extensions = G
# exclude = .venv,.git,.tox,dist,doc,*egg,build
# import-order-style = google
# application-import-names = sqlalchemy_jdbcapi

# [metadata]
# description_file = README.rst
